fix: prevent horizontal scroll

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -1,5 +1,10 @@
 @import "@/app/css/mixin.scss";
 
+#core
+{
+	overflow-x: hidden;
+}
+
 .button
 {
 	color: #FFFFFF;
